# multi-agent-coding-assistant

./: README.md  pyproject.toml  requirements.txt  streamlit_app.py
agents/: agents.py
models/: model_clients.py
teams/: teams.py
